@@ -1403,6 +1403,8 @@ output_object_args (FILE *fp, GType object_type)
   guint n_properties;
   gboolean child_prop;
   gboolean style_prop;
+  gboolean is_pointer;
+  const gchar *type_name;
   gchar *type_desc;
   gchar *default_value;
 
@@ -1471,8 +1473,9 @@ output_object_args (FILE *fp, GType object_type)
 
 	type_desc = describe_type (spec);
 	default_value = describe_default (spec);
-        fprintf (fp, "<ARG>\\n<NAME>%s::%s</NAME>\\n<TYPE>%s</TYPE>\\n<RANGE>%s</RANGE>\\n<FLAGS>%s</FLAGS>\\n<NICK>%s</NICK>\\n<BLURB>%s%s</BLURB>\\n<DEFAULT>%s</DEFAULT>\\n</ARG>\\n\\n",
-	         object_class_name, g_param_spec_get_name (spec), g_type_name (spec->value_type), type_desc, flags, nick ? nick : "(null)", blurb ? blurb : "(null)", dot, default_value);
+	type_name = get_type_name (spec->value_type, &is_pointer);
+        fprintf (fp, "<ARG>\\n<NAME>%s::%s</NAME>\\n<TYPE>%s%s</TYPE>\\n<RANGE>%s</RANGE>\\n<FLAGS>%s</FLAGS>\\n<NICK>%s</NICK>\\n<BLURB>%s%s</BLURB>\\n<DEFAULT>%s</DEFAULT>\\n</ARG>\\n\\n",
+	         object_class_name, g_param_spec_get_name (spec), type_name, is_pointer ? "*" : "", type_desc, flags, nick ? nick : "(null)", blurb ? blurb : "(null)", dot, default_value);
 	g_free (type_desc);
 	g_free (default_value);
       }
