@@ -1,3 +1,11 @@
+2007-11-11  Stefan Kost  <ensonic@users.sf.net>
+
+	patch by: David Nečas <yeti@physics.muni.cz>
+
+	* gtkdoc-mkdb.in:
+	* gtkdoc-scangobj.in:
+	  Display proper types for pointer properties. Fixes #468278.
+
 2007-10-31  Stefan Kost  <ensonic@users.sf.net>
 
 	* gtkdoc-mkdb.in:
